--- a/doordash_delivery_est/doordash_est.ipynb
+++ b/doordash_delivery_est/doordash_est.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
     "from statsmodels.stats.outliers_influence import variance_inflation_factor\n",
     "from statsmodels.tools import add_constant\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.model_selection import KFold\n",
+    "from sklearn.model_selection import RepeatedKFold\n",
     "from sklearn.model_selection import cross_val_score\n",
     "from sklearn.decomposition import PCA\n",
     "from sklearn.preprocessing import StandardScaler,MinMaxScaler\n",
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +478,7 @@
        "[5 rows x 139 columns]"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 609,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -773,7 +773,7 @@
        "[5 rows x 139 columns]"
       ]
      },
-     "execution_count": 609,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -824,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1041,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1073,6 +1073,19 @@
     "    except Exception as ex:\n",
     "        raise ex\n",
     "    return trained_model,feature_importances_df,eval_stats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def testMethod_cross_validate(model,dataset=pd.DataFrame,n_splits=int,n_repeats=int,n_jobs=int):\n",
+    "    try:\n",
+    "        yhat = model.predict(dataset)\n",
+    "        cv = RepeatedKFold()\n",
+    "        scores = cross_val_score(estimator=model,X=dataset,y=)"
    ]
   },
   {
@@ -1151,21 +1164,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'vif_x_train' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [75], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39m## vif xgbregressor\u001b[39;00m\n\u001b[0;32m      2\u001b[0m trained_xgbregressor \u001b[39m=\u001b[39m ApplyMethod_autoML(\n\u001b[1;32m----> 3\u001b[0m     x_train\u001b[39m=\u001b[39mvif_x_train,\n\u001b[0;32m      4\u001b[0m     x_test\u001b[39m=\u001b[39mvif_x_test,\n\u001b[0;32m      5\u001b[0m     y_test\u001b[39m=\u001b[39mvif_y_test,\n\u001b[0;32m      6\u001b[0m     y_train\u001b[39m=\u001b[39mvif_y_train,\n\u001b[0;32m      7\u001b[0m     time_budget\u001b[39m=\u001b[39m\u001b[39m60\u001b[39m,\n\u001b[0;32m      8\u001b[0m     metric\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mmse\u001b[39m\u001b[39m'\u001b[39m,\n\u001b[0;32m      9\u001b[0m     estimator_list\u001b[39m=\u001b[39m[\u001b[39m'\u001b[39m\u001b[39mrf\u001b[39m\u001b[39m'\u001b[39m,\u001b[39m'\u001b[39m\u001b[39mextra_tree\u001b[39m\u001b[39m'\u001b[39m,\u001b[39m'\u001b[39m\u001b[39mlgbm\u001b[39m\u001b[39m'\u001b[39m,\u001b[39m'\u001b[39m\u001b[39mxgboost\u001b[39m\u001b[39m'\u001b[39m],\n\u001b[0;32m     10\u001b[0m     task\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mregression\u001b[39m\u001b[39m'\u001b[39m\n\u001b[0;32m     11\u001b[0m     )\n\u001b[0;32m     12\u001b[0m trained_xgbregressor[\u001b[39m2\u001b[39m]\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'vif_x_train' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## vif xgbregressor\n",
     "trained_xgbregressor = ApplyMethod_autoML(\n",
@@ -1183,7 +1184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1192,21 +1193,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'train_RMSE:': 1270.1997,\n",
-       " 'train_RMSE_to_mean_ratio': 0.44505675978427817,\n",
-       " 'train_MAE:': 629.5885,\n",
-       " 'test_RMSE:': 1009.2285,\n",
-       " 'test_RMSE_to_mean_ratio': 0.35409776637787826,\n",
-       " 'test_MAE:': 628.75073}"
+       "{'train_RMSE:': 1272.384,\n",
+       " 'train_RMSE_to_mean_ratio': 0.4457601473868597,\n",
+       " 'train_MAE:': 625.2693,\n",
+       " 'test_RMSE:': 971.6224,\n",
+       " 'test_RMSE_to_mean_ratio': 0.3406528003097898,\n",
+       " 'test_MAE:': 627.40436}"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1480,7 +1481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1504,6 +1505,7 @@
     "       prep_est_features['pred_order_prep_time'] = yhat.reshape(-1,1)\n",
     "       #osgir = prep_xtrain[['pred_order_prep_time']]\n",
     "       delivery_est_features = delivery_est_features_df.join(prep_est_features[['pred_order_prep_time']])\n",
+    "       delivery_est_features['est_composite_delivery'] = delivery_est_features['pred_order_prep_time'] + delivery_est_features['est_time_non-prep']\n",
     "    except Exception as ex:\n",
     "        raise ex\n",
     "    return delivery_est_features,prep_time_model[2]"
@@ -1511,19 +1513,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "## what if I did not use any dimensionality reduction?\n",
-    "store_xtrain,store_xtest,store_ytrain,store_ytest = build_train_test(dataset=prep_time_df[prep_time_df['est_order_total_prep_time'] > 0],target_feature='est_order_total_prep_time',test_size=0.2)"
+    "store_prep_split = build_train_test(dataset=prep_time_df,target_feature='est_order_total_prep_time',test_size=0.2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "check Spark installation...This line should appear only once.\n",
+      "\n",
+      "use_spark=True requires installation of PySpark. Please run pip install flaml[spark]\n",
+      "        and check [here](https://spark.apache.org/docs/latest/api/python/getting_started/install.html)\n",
+      "        for more details about installing Spark.\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -1535,17 +1549,17 @@
        " 'test_MAE:': 630.96466}"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "deliv_est_df = predict_prep_time(\n",
-    "    prep_xtrain=store_xtrain,\n",
-    "    prep_xtest=store_xtest,\n",
-    "    prep_ytrain=store_ytrain,\n",
-    "    prep_ytest=store_ytest,\n",
+    "    prep_xtrain=store_prep_split[0],\n",
+    "    prep_xtest=store_prep_split[1],\n",
+    "    prep_ytrain=store_prep_split[2],\n",
+    "    prep_ytest=store_prep_split[3],\n",
     "    time_budget=60,\n",
     "    metric='mse',\n",
     "    estimator_list=['xgboost'],\n",
@@ -1557,7 +1571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1566,7 +1580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1584,62 +1598,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "966.95306"
+       "{'train_RMSE:': 1278.1251,\n",
+       " 'train_RMSE_to_mean_ratio': 0.44777144944096997,\n",
+       " 'train_MAE:': 628.01184,\n",
+       " 'test_RMSE:': 966.86096,\n",
+       " 'test_RMSE_to_mean_ratio': 0.33898343893194427,\n",
+       " 'test_MAE:': 629.41736}"
       ]
      },
-     "execution_count": 150,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pred = auto_xgb_no_reduction[0].predict(deliv_xtest)\n",
-    "mean_squared_error(deliv_ytest,pred,squared=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 155,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1009.2285"
-      ]
-     },
-     "execution_count": 155,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "mean_squared_error(base_ytest,auto_xgb_no_reduction[0].predict(base_xtest),squared=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 146,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'train_RMSE:': 1277.0405,\n",
-       " 'train_RMSE_to_mean_ratio': 0.44739147838462906,\n",
-       " 'train_MAE:': 627.72217,\n",
-       " 'test_RMSE:': 973.2295,\n",
-       " 'test_RMSE_to_mean_ratio': 0.3412162587251421,\n",
-       " 'test_MAE:': 630.2245}"
-      ]
-     },
-     "execution_count": 146,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1650,7 +1623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1682,77 +1655,77 @@
        "    <tr>\n",
        "      <th>25</th>\n",
        "      <td>store_est_median_total_prep_time</td>\n",
-       "      <td>0.223089</td>\n",
+       "      <td>0.608582</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>est_time_non-prep</td>\n",
-       "      <td>0.140959</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>estimated_store_to_consumer_driving_duration</td>\n",
-       "      <td>0.117252</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>busy_to_outstanding</td>\n",
-       "      <td>0.112905</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>onshift_to_outstanding</td>\n",
-       "      <td>0.082427</td>\n",
+       "      <th>137</th>\n",
+       "      <td>est_composite_delivery</td>\n",
+       "      <td>0.130384</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>136</th>\n",
        "      <td>pred_order_prep_time</td>\n",
-       "      <td>0.072002</td>\n",
+       "      <td>0.051090</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>store_est_time_prep_per_item_median</td>\n",
-       "      <td>0.018401</td>\n",
+       "      <th>13</th>\n",
+       "      <td>busy_to_outstanding</td>\n",
+       "      <td>0.042061</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>store_est_time_prep_per_item_mean</td>\n",
-       "      <td>0.011803</td>\n",
+       "      <th>9</th>\n",
+       "      <td>estimated_store_to_consumer_driving_duration</td>\n",
+       "      <td>0.040138</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>store_est_time_prep_per_item_max</td>\n",
-       "      <td>0.011520</td>\n",
+       "      <th>10</th>\n",
+       "      <td>est_time_non-prep</td>\n",
+       "      <td>0.028686</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>onshift_to_outstanding</td>\n",
+       "      <td>0.013071</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
        "      <td>store_est_time_prep_per_item_std</td>\n",
-       "      <td>0.011020</td>\n",
+       "      <td>0.004589</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>store_est_time_prep_per_item_max</td>\n",
+       "      <td>0.002870</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>98</th>\n",
        "      <td>market_id__1.0</td>\n",
-       "      <td>0.010570</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>estimated_order_place_duration</td>\n",
-       "      <td>0.009278</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>available_dashers</td>\n",
-       "      <td>0.007909</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>113</th>\n",
-       "      <td>created_hour_of_day__2</td>\n",
-       "      <td>0.006794</td>\n",
+       "      <td>0.002765</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>26</th>\n",
        "      <td>store_est_mean_total_prep_time</td>\n",
-       "      <td>0.006267</td>\n",
+       "      <td>0.002693</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>estimated_order_place_duration</td>\n",
+       "      <td>0.002559</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>100</th>\n",
+       "      <td>market_id__3.0</td>\n",
+       "      <td>0.002508</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>116</th>\n",
+       "      <td>created_hour_of_day__5</td>\n",
+       "      <td>0.002452</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>store_est_time_prep_per_item_mean</td>\n",
+       "      <td>0.002368</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1760,24 +1733,24 @@
       ],
       "text/plain": [
        "                                         features  importance\n",
-       "25               store_est_median_total_prep_time    0.223089\n",
-       "10                              est_time_non-prep    0.140959\n",
-       "9    estimated_store_to_consumer_driving_duration    0.117252\n",
-       "13                            busy_to_outstanding    0.112905\n",
-       "14                         onshift_to_outstanding    0.082427\n",
-       "136                          pred_order_prep_time    0.072002\n",
-       "17            store_est_time_prep_per_item_median    0.018401\n",
-       "18              store_est_time_prep_per_item_mean    0.011803\n",
-       "16               store_est_time_prep_per_item_max    0.011520\n",
-       "19               store_est_time_prep_per_item_std    0.011020\n",
-       "98                                 market_id__1.0    0.010570\n",
-       "8                  estimated_order_place_duration    0.009278\n",
-       "11                              available_dashers    0.007909\n",
-       "113                        created_hour_of_day__2    0.006794\n",
-       "26                 store_est_mean_total_prep_time    0.006267"
+       "25               store_est_median_total_prep_time    0.608582\n",
+       "137                        est_composite_delivery    0.130384\n",
+       "136                          pred_order_prep_time    0.051090\n",
+       "13                            busy_to_outstanding    0.042061\n",
+       "9    estimated_store_to_consumer_driving_duration    0.040138\n",
+       "10                              est_time_non-prep    0.028686\n",
+       "14                         onshift_to_outstanding    0.013071\n",
+       "19               store_est_time_prep_per_item_std    0.004589\n",
+       "16               store_est_time_prep_per_item_max    0.002870\n",
+       "98                                 market_id__1.0    0.002765\n",
+       "26                 store_est_mean_total_prep_time    0.002693\n",
+       "8                  estimated_order_place_duration    0.002559\n",
+       "100                                market_id__3.0    0.002508\n",
+       "116                        created_hour_of_day__5    0.002452\n",
+       "18              store_est_time_prep_per_item_mean    0.002368"
       ]
      },
-     "execution_count": 147,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
