--- a/doordash_delivery_est/doordash_est.ipynb
+++ b/doordash_delivery_est/doordash_est.ipynb
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,6 +245,7 @@
     "def cleanFeatures_remove_outliers(historical_data:pd.DataFrame) -> pd.DataFrame:\n",
     "    try:\n",
     "        historical_data = historical_data.loc[historical_data['actual_total_delivery_duration'] > historical_data['est_time_non-prep']]\n",
+    "        historical_data = historical_data[historical_data['actual_total_delivery_duration'] <= 7200]\n",
     "    except Exception as ex:\n",
     "        raise ex\n",
     "    return historical_data        "
@@ -252,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +423,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 139 columns</p>\n",
+       "<p>5 rows × 138 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -475,10 +476,10 @@
        "3                     0.0                     0.0                     1.0  \n",
        "4                     0.0                     0.0                     0.0  \n",
        "\n",
-       "[5 rows x 139 columns]"
+       "[5 rows x 138 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1081,42 +1082,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def ApplyMethod_autoML_kfcv(dataset=pd.DataFrame,target_feature=str,time_budget=int,metric=str,estimator_list=list,task=str):\n",
-    "## automl plus the built-in kfold cross-validation function\n",
-    "    X = dataset.drop(columns=str(target_feature))\n",
-    "    y = dataset[[str(target_feature)]]\n",
-    "    auto_ml = AutoML()\n",
-    "    try:\n",
-    "        auto_ml.fit(dataframe=dataset,label=target_feature,eval_method='cv',split_ratio=0.2,n_splits=10,time_budget=time_budget,metric=metric,estimator_list=estimator_list,task=task,seed=42,verbose=0)\n",
-    "        yhat = auto_ml.predict(X)\n",
-    "        ## test error\n",
-    "        RMSE = mean_squared_error(y_true=y,y_pred=yhat,squared=False)\n",
-    "        MAE = mean_absolute_error(y_true=y,y_pred=yhat)\n",
-    "        ## feature importances\n",
-    "        feature_importances_df = pd.DataFrame({'features':auto_ml.feature_names_in_,'importance':auto_ml.feature_importances_})\n",
-    "        eval_stats = {\n",
-    "            'train_RMSE:':RMSE,\n",
-    "            # gives context to the RMSE; the lower the ratio the better\n",
-    "            'train_RMSE_to_mean_ratio':RMSE / (np.mean(y)),\n",
-    "            'train_MAE:':MAE\n",
-    "        }\n",
-    "        trained_model = auto_ml\n",
-    "    except Exception as ex:\n",
-    "        raise ex\n",
-    "    return trained_model,feature_importances_df,eval_stats"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#TODO: #7 fix, finish cross validation function\n",
+    "#TODO: #7 fix, finish cross validation function -- DONE\n",
     "def evalMethod_cross_validate(model,model_params=dict,dataset=pd.DataFrame,target_feature=str,n_splits=int):\n",
     "## evaluates a model using k-fold cross-validation\n",
     "    try:\n",
@@ -1282,18 +1252,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ -921.80487061, -1025.06188965, -2647.92749023,  -921.8692627 ,\n",
-       "        -880.00769043,  -882.80041504,  -881.44683838, -1086.76342773,\n",
-       "        -994.01202393,  -924.31524658])"
+       "array([-797.08911133, -789.20721436, -786.58618164, -787.4498291 ,\n",
+       "       -786.31195068, -786.04296875, -777.65655518, -786.68359375,\n",
+       "       -792.10949707, -780.45678711])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1304,22 +1281,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-1116.600915528"
+       "-946.4535183388889"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.average(np.array([-921.80487061,-1025.06188965,-2647.92749023,-921.8692627,-880.00769043,-882.80041504,-881.44683838,-1086.76342773,-994.01202393,-924.31524658]))"
+    "np.average(np.array([-921.80487061,-1025.06188965,-921.8692627,-880.00769043,-882.80041504,-881.44683838,-1086.76342773,-994.01202393,-924.31524658]))"
    ]
   },
   {
