--- a/doordash_delivery_est/doordash_est.ipynb
+++ b/doordash_delivery_est/doordash_est.ipynb
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +480,7 @@
        "[5 rows x 139 columns]"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1043,10 +1043,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
+    "## TODO: #9 add cross-validation to final score delivery\n",
     "def ApplyMethod_autoML(x_train,x_test,y_train,y_test,time_budget=int,metric=str,estimator_list=list,task=str):\n",
     "    auto_ml = AutoML()\n",
     "    class xgbGamma(XGBoostEstimator):\n",
@@ -1055,26 +1056,34 @@
     "    auto_ml.add_learner(learner_name=\"xgb_gamma\",learner_class=xgbGamma)\n",
     "    try:\n",
     "        auto_ml.fit(X_train=x_train,y_train=y_train,time_budget=time_budget,metric=metric,estimator_list=estimator_list,task=task,seed=42,verbose=0)\n",
-    "        ## test error\n",
-    "        y_hat_test = auto_ml.predict(x_test)\n",
-    "        test_RMSE = mean_squared_error(y_true=y_test,y_pred=y_hat_test,squared=False)\n",
-    "        test_MAE = mean_absolute_error(y_true=y_test,y_pred=y_hat_test)\n",
-    "        ## feature importances\n",
     "        feature_importances_df = pd.DataFrame({'features':auto_ml.feature_names_in_,'importance':auto_ml.feature_importances_})\n",
-    "        ## train error\n",
-    "        y_hat_train = auto_ml.predict(x_train)\n",
-    "        train_RMSE = mean_squared_error(y_true=y_train,y_pred=y_hat_train,squared=False)\n",
-    "        train_MAE = mean_absolute_error(y_true=y_train,y_pred=y_hat_train)\n",
-    "        eval_stats = {\n",
-    "            'train_RMSE:':train_RMSE,\n",
-    "            # gives context to the RMSE; the lower the ratio the better\n",
-    "            'train_RMSE_to_mean_ratio':train_RMSE / (np.mean(y_train)),\n",
-    "            'train_MAE:':train_MAE,\n",
-    "            'test_RMSE:':test_RMSE,\n",
-    "            # gives context to the RMSE; the lower the ratio the better\n",
-    "            'test_RMSE_to_mean_ratio':test_RMSE / (np.mean(y_test)),\n",
-    "            'test_MAE:':test_MAE\n",
-    "        }\n",
+    "        if task == 'regression':\n",
+    "        ## test error\n",
+    "            y_hat_test = auto_ml.predict(x_test)\n",
+    "            test_RMSE = mean_squared_error(y_true=y_test,y_pred=y_hat_test,squared=False)\n",
+    "            test_MAE = mean_absolute_error(y_true=y_test,y_pred=y_hat_test)\n",
+    "            ## feature importances\n",
+    "            ## train error\n",
+    "            y_hat_train = auto_ml.predict(x_train)\n",
+    "            train_RMSE = mean_squared_error(y_true=y_train,y_pred=y_hat_train,squared=False)\n",
+    "            train_MAE = mean_absolute_error(y_true=y_train,y_pred=y_hat_train)\n",
+    "            eval_stats = {\n",
+    "                'train_RMSE:':train_RMSE,\n",
+    "                # gives context to the RMSE; the lower the ratio the better\n",
+    "                'train_RMSE_to_mean_ratio':train_RMSE / (np.mean(y_train)),\n",
+    "                'train_MAE:':train_MAE,\n",
+    "                'test_RMSE:':test_RMSE,\n",
+    "                # gives context to the RMSE; the lower the ratio the better\n",
+    "                'test_RMSE_to_mean_ratio':test_RMSE / (np.mean(y_test)),\n",
+    "                'test_MAE:':test_MAE\n",
+    "            }\n",
+    "        if task == 'classification':\n",
+    "            y_hat_test = auto_ml.predict(x_test)\n",
+    "            y_hat_train = auto_ml.predict(x_train)\n",
+    "            eval_stats = {\n",
+    "                'train_accuracy': accuracy_score(y_true=y_train,y_pred=y_hat_train),\n",
+    "                'test_accuracy': accuracy_score(y_true=y_test,y_pred=y_hat_test)\n",
+    "            }\n",
     "        trained_model = auto_ml\n",
     "    except Exception as ex:\n",
     "        raise ex\n",
@@ -1196,7 +1205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1206,21 +1215,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'train_RMSE:': 926.54297,\n",
-       " 'train_RMSE_to_mean_ratio': 0.32483146316497724,\n",
-       " 'train_MAE:': 623.2688,\n",
-       " 'test_RMSE:': 991.1644,\n",
-       " 'test_RMSE_to_mean_ratio': 0.34764720852738124,\n",
-       " 'test_MAE:': 627.4639}"
+       "{'train_RMSE:': 0.27605006,\n",
+       " 'train_RMSE_to_mean_ratio': 0.034991159566314815,\n",
+       " 'train_MAE:': 0.21401048,\n",
+       " 'test_RMSE:': 996.5902,\n",
+       " 'test_RMSE_to_mean_ratio': 0.34954516258554774,\n",
+       " 'test_MAE:': 612.77}"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1330,7 +1339,69 @@
     "\n",
     "Let's assume that from a customer's perspective, the importance of the accuracy of the delivery decreases with the estimated total delivery duration. At a certain point it might be more viable to simply inform a customer that their order will be delivered in at least two hour's time (or that the service is \"finding a Dasher...\"), rather than providing an actual estimate.\n",
     "\n",
-    "If it is possible to build a model to classify an order as an outlier and then use that model as a filter to decide which orders receive genuine estimates, the delivery duration estimator could then only be trained on data we know will produce higher-quality results."
+    "If it is possible to build a model to classify an order as an outlier and then use that model as a filter to decide which orders receive genuine estimates, the delivery duration estimator could then only be trained on data we know will produce higher-quality results. Testing the potential impact of the model is simple; when actual delivery durations over two hours (7200 seconds) are removed from the training set, an AutoML regression model returns the following results:\n",
+    "\n",
+    "    {'train_RMSE:': 779.9482,\n",
+    "    'train_RMSE_to_mean_ratio': 0.2767521554477982,\n",
+    "    'train_MAE:': 589.2149,\n",
+    "    'test_RMSE:': 790.5616,\n",
+    "    'test_RMSE_to_mean_ratio': 0.28073476932456126,\n",
+    "    'test_MAE:': 593.6754}\n",
+    "\n",
+    "Note that the RMSE-to-mean ratio is significantly less than the same score (0.34744267790653127, a 19.2% improvement) for a model trained on an un-filtered dataset. Even though the mean actual delivery time is lower in the filtered dataset and less data is available for training (929 rows, 0.528% of the dataset), the model is able to deliver more accurate predictions. This makes the outlier identification model worth building."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset = train_df.copy()\n",
+    "dataset['over_one_half_hours'] = dataset['actual_total_delivery_duration'].apply(lambda x: 1 if x >= 5400 else 0)\n",
+    "dataset_train_test = build_train_test(dataset=dataset.drop(columns='actual_total_delivery_duration'),target_feature='over_one_half_hours',test_size=0.3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "label_outlier_model = ApplyMethod_autoML(\n",
+    "    x_train=dataset_train_test[0],\n",
+    "    x_test=dataset_train_test[1],\n",
+    "    y_train=dataset_train_test[2],\n",
+    "    y_test=dataset_train_test[3],\n",
+    "    time_budget=120,\n",
+    "    task='classification',\n",
+    "    metric='accuracy',\n",
+    "    estimator_list=['lgbm','xgboost','extra_tree']\n",
+    ")\n",
+    "label_outlier_model[2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.973824965469417"
+      ]
+     },
+     "execution_count": 150,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_pred = label_outlier_model[0].predict(dataset.drop(columns='over_one_half_hours'))\n",
+    "dataset['y_pred'] = y_pred.reshape(-1,1)\n",
+    "dataset['error'] = dataset.apply(lambda x: 0 if x['over_one_half_hours'] == x['y_pred'] else 1,axis=1)\n",
+    "accuracy_score(y_pred=dataset[['y_pred']],y_true=dataset[['over_one_half_hours']])"
    ]
   },
   {
