ensemble outlier build done

--- a/doordash_delivery_est/doordash_est.ipynb
+++ b/doordash_delivery_est/doordash_est.ipynb
@@ -1205,7 +1205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1215,21 +1215,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'train_RMSE:': 0.27605006,\n",
-       " 'train_RMSE_to_mean_ratio': 0.034991159566314815,\n",
-       " 'train_MAE:': 0.21401048,\n",
-       " 'test_RMSE:': 996.5902,\n",
-       " 'test_RMSE_to_mean_ratio': 0.34954516258554774,\n",
-       " 'test_MAE:': 612.77}"
+       "{'train_RMSE:': 923.36597,\n",
+       " 'train_RMSE_to_mean_ratio': 0.32371765600468566,\n",
+       " 'train_MAE:': 620.25684,\n",
+       " 'test_RMSE:': 988.6792,\n",
+       " 'test_RMSE_to_mean_ratio': 0.34677552359753305,\n",
+       " 'test_MAE:': 624.8265}"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 163,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1337,7 +1337,7 @@
     "\n",
     "How might we go about removing outlier delivery durations while still providing an estimated delivery duration to the customer?\n",
     "\n",
-    "Let's assume that from a customer's perspective, the importance of the accuracy of the delivery decreases with the estimated total delivery duration. At a certain point it might be more viable to simply inform a customer that their order will be delivered in at least two hour's time (or that the service is \"finding a Dasher...\"), rather than providing an actual estimate.\n",
+    "Let's assume that from a customer's perspective, the importance of the accuracy of the delivery decreases with the estimated total delivery duration. At a certain point it might be more viable to inform a customer in-app that their order will be delivered in at least 90 minutes (or that the service is \"finding a Dasher...\"), rather than providing an actual estimate.\n",
     "\n",
     "If it is possible to build a model to classify an order as an outlier and then use that model as a filter to decide which orders receive genuine estimates, the delivery duration estimator could then only be trained on data we know will produce higher-quality results. Testing the potential impact of the model is simple; when actual delivery durations over two hours (7200 seconds) are removed from the training set, an AutoML regression model returns the following results:\n",
     "\n",
@@ -1348,7 +1348,7 @@
     "    'test_RMSE_to_mean_ratio': 0.28073476932456126,\n",
     "    'test_MAE:': 593.6754}\n",
     "\n",
-    "Note that the RMSE-to-mean ratio is significantly less than the same score (0.34744267790653127, a 19.2% improvement) for a model trained on an un-filtered dataset. Even though the mean actual delivery time is lower in the filtered dataset and less data is available for training (929 rows, 0.528% of the dataset), the model is able to deliver more accurate predictions. This makes the outlier identification model worth building."
+    "Note that the RMSE-to-mean ratio is significantly less than the same score (0.34744267790653127, a 19.2% improvement) for a model trained on an un-filtered dataset. Even though the mean actual delivery time is lower in the filtered dataset and less data is available for training (4815 dropped rows, 2.737% of the dataset), the model is able to deliver more accurate predictions. This makes the outlier identification model worth building."
    ]
   },
   {
@@ -1364,9 +1364,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 153,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'train_accuracy': 0.9741049605768528, 'test_accuracy': 0.9731716559302767}"
+      ]
+     },
+     "execution_count": 153,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "label_outlier_model = ApplyMethod_autoML(\n",
     "    x_train=dataset_train_test[0],\n",
@@ -1383,25 +1394,329 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>features</th>\n",
+       "      <th>importance</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>onshift_to_outstanding</td>\n",
+       "      <td>31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>store_est_time_prep_per_item_max</td>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>est_time_non-prep</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>store_est_time_prep_per_item_std</td>\n",
+       "      <td>19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>total_busy_dashers</td>\n",
+       "      <td>19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>store_est_mean_total_prep_time</td>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>store_est_median_total_prep_time</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>store_est_time_prep_per_item_min</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>subtotal</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>total_onshift_dashers</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>busy_to_outstanding</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>107</th>\n",
+       "      <td>order_protocol__4.0</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>store_est_time_prep_per_item_mean</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>busy_to_onshift</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>total_outstanding_orders</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "0.973824965469417"
+       "                              features  importance\n",
+       "14              onshift_to_outstanding          31\n",
+       "16    store_est_time_prep_per_item_max          25\n",
+       "10                   est_time_non-prep          21\n",
+       "19    store_est_time_prep_per_item_std          19\n",
+       "6                   total_busy_dashers          19\n",
+       "26      store_est_mean_total_prep_time          17\n",
+       "25    store_est_median_total_prep_time          16\n",
+       "15    store_est_time_prep_per_item_min          14\n",
+       "1                             subtotal          14\n",
+       "5                total_onshift_dashers          14\n",
+       "13                 busy_to_outstanding          13\n",
+       "107                order_protocol__4.0          12\n",
+       "18   store_est_time_prep_per_item_mean          12\n",
+       "12                     busy_to_onshift          12\n",
+       "7             total_outstanding_orders          10"
       ]
      },
-     "execution_count": 150,
+     "execution_count": 174,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "## feature importances for classifier model\n",
+    "label_outlier_model[1].sort_values(by='importance',ascending=False).head(15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "y_pred = label_outlier_model[0].predict(dataset.drop(columns='over_one_half_hours'))\n",
     "dataset['y_pred'] = y_pred.reshape(-1,1)\n",
-    "dataset['error'] = dataset.apply(lambda x: 0 if x['over_one_half_hours'] == x['y_pred'] else 1,axis=1)\n",
-    "accuracy_score(y_pred=dataset[['y_pred']],y_true=dataset[['over_one_half_hours']])"
+    "trimmed_dataset_train_test = build_train_test(\n",
+    "    dataset=dataset[dataset['y_pred'] == 0].drop(columns=['y_pred','over_one_half_hours']),\n",
+    "    target_feature='actual_total_delivery_duration',\n",
+    "    test_size=0.2\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'train_RMSE:': 789.75757,\n",
+       " 'train_RMSE_to_mean_ratio': 0.27820734488368404,\n",
+       " 'train_MAE:': 558.33057,\n",
+       " 'test_RMSE:': 788.6776,\n",
+       " 'test_RMSE_to_mean_ratio': 0.27781751949047206,\n",
+       " 'test_MAE:': 558.1844}"
+      ]
+     },
+     "execution_count": 157,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trimmed_deliv_pred_model = ApplyMethod_autoML(\n",
+    "    x_train=trimmed_dataset_train_test[0],\n",
+    "    x_test=trimmed_dataset_train_test[1],\n",
+    "    y_train=trimmed_dataset_train_test[2],\n",
+    "    y_test=trimmed_dataset_train_test[3],\n",
+    "    time_budget=120,\n",
+    "    task='regression',\n",
+    "    metric='mse',\n",
+    "    estimator_list=['xgboost','xgb_gamma']\n",
+    ")\n",
+    "trimmed_deliv_pred_model[2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>features</th>\n",
+       "      <th>importance</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>136</th>\n",
+       "      <td>error</td>\n",
+       "      <td>0.227605</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>est_time_non-prep</td>\n",
+       "      <td>0.172502</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>113</th>\n",
+       "      <td>created_hour_of_day__2</td>\n",
+       "      <td>0.086752</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>onshift_to_outstanding</td>\n",
+       "      <td>0.079122</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>subtotal</td>\n",
+       "      <td>0.029078</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>busy_to_outstanding</td>\n",
+       "      <td>0.020696</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>114</th>\n",
+       "      <td>created_hour_of_day__3</td>\n",
+       "      <td>0.019585</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>store_est_median_total_prep_time</td>\n",
+       "      <td>0.019001</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>116</th>\n",
+       "      <td>created_hour_of_day__5</td>\n",
+       "      <td>0.017803</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>112</th>\n",
+       "      <td>created_hour_of_day__1</td>\n",
+       "      <td>0.017230</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                             features  importance\n",
+       "136                             error    0.227605\n",
+       "10                  est_time_non-prep    0.172502\n",
+       "113            created_hour_of_day__2    0.086752\n",
+       "14             onshift_to_outstanding    0.079122\n",
+       "1                            subtotal    0.029078\n",
+       "13                busy_to_outstanding    0.020696\n",
+       "114            created_hour_of_day__3    0.019585\n",
+       "25   store_est_median_total_prep_time    0.019001\n",
+       "116            created_hour_of_day__5    0.017803\n",
+       "112            created_hour_of_day__1    0.017230"
+      ]
+     },
+     "execution_count": 175,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trimmed_deliv_pred_model[1].sort_values(by='importance',ascending=False).head(10)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Classification + prediction model results\n",
+    "\n",
+    "A model trained on the same featureset (sans 'actual_total_delivery_duration' to prevent leakage) but instead asked to label orders with a total delivery duration of 90 minutes or more - rather than predicting the total delivery duration in seconds - produces the following accuracy scores:\n",
+    "\n",
+    "    {'train_accuracy': 0.9741049605768528, 'test_accuracy': 0.9731716559302767}\n",
+    "\n",
+    "Note that the above accuracy scores are for the entire dataset - the classifier model only managed to identify 754 of the 4815 orders (15.66%) with a total delivery duration of 90 minutes or more.\n",
+    "\n",
+    "Dropping the orders predicted to take at least 90 minutes and then training a model with that trimmed dataset produces the following metrics:\n",
+    "\n",
+    "    {'train_RMSE:': 789.75757,\n",
+    "    'train_RMSE_to_mean_ratio': 0.27820734488368404,\n",
+    "    'train_MAE:': 558.33057,\n",
+    "    'test_RMSE:': 788.6776,\n",
+    "    'test_RMSE_to_mean_ratio': 0.27781751949047206,\n",
+    "    'test_MAE:': 558.1844}\n",
+    "\n",
+    "As expected, removing outliers improves the performance of the model. We are only able to remove outliers because of the strong performance of the classifier model and the small number of orders that would receive a notice rather than an estimate. \n",
+    "\n",
+    "Two other notes:\n",
+    "\n",
+    "1. I did apply log and standard normalization to the dataset in an attempt to mitigate the effect of the outliers, but normalization had a negligable effect when compared against the two-step model. \n",
+    "2. The USD value of the orders that were knocked out from the dataset is $28,006.01. In practice we would want to identify the impact of accurate total delivery duration estimates on the cancellation rate to determine if the compute costs for the model "
    ]
   },
   {
